@@ -1,3 +1,7 @@
+2008-07-30  Jeffrey Stedfast  <fejj@novell.com>
+
+	* libgnome/gnome-sound.c (send_all): More robustification.
+
 2008-07-22  Lennart Poettering   <lpoetter@redhat.com>
 
 	Fixes bug #541420
